Fix missing borders in non-existed user page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1539,8 +1539,6 @@ aside {
 .nothing-info {
   padding: 20px;
   min-height: 50vh;
-  border: 1px solid #e8e8e8;
-  border-top: none;
   justify-content: flex-start;
 
   .heading {
